cleaning and fixing